--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.21.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
